@@ -16,7 +16,8 @@
  - (djm) Update README to reflect AIX's status as a well supported platform.
    From dtucker@zip.com.au
  - (tim) [Makefile.in configure.ac] replace fixpath with sed script. Patch
-   by Mo DeJong.
+ - (tim) [auth.c] declare today at top of allowed_user() to keep
+   older compilers happy.
 
 20030107
  - (djm) Bug #401: Work around Linux breakage with IPv6 mapped addresses. 
